--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Автошкола PWA",
   "short_name": "PWA",
   "start_url": "./",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
